feat: Improve SEO and add Helmet for dynamic titles
Integrates `react-helmet-async` to manage SEO meta tags dynamically across different pages, improving search engine visibility and user experience. Updates the `index.html` with initial meta descriptions and keywords, and adds specific SEO components to the About page. Also, refactors the Admin Dashboard to fetch product counts asynchronously.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lidermaq - Máquinas e Equipamentos</title>
+    <title>Lidermaq Equipamentos | Máquinas e Móveis Industriais em Picos-PI</title>
+    <meta name="description" content="Lidermaq Equipamentos: Soluções completas em máquinas para padarias, restaurantes, açougues e supermercados em Picos e região." />
+    <meta name="keywords" content="Lidermaq, Picos, Piauí, máquinas industriais, equipamentos para padaria, móveis para escritório, açougue, restaurante" />
+    <meta name="author" content="Lidermaq" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
   <body>
     <div id="root"></div>
